Bug 13768 - group quotas are not displayed
Summary: group quotas are not displayed
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: 4.9.4
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Samba QA Contact
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-01-30 16:04 UTC by Björn Jacke
Modified: 2019-02-07 02:14 UTC (History)
0 users

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Björn Jacke 2019-01-30 16:04:57 UTC
when group quotas are enabled, they are not shown to SMB clients. Patch ready, bug number needed....
Comment 1 Björn Jacke 2019-02-07 02:13:59 UTC
fixed in master with 9df23fe4e51227b3d5bcb074fe34d10f9e019a66