source3/lib/sysquotas_linux.c
@@ -92,10 +92,10 @@ int sys_get_vfs_quota(const char *path, const char *bdev,
 		case SMB_GROUP_FS_QUOTA_TYPE:
 			DEBUG(10, ("sys_get_vfs_quota: path[%s] bdev[%s] "
 				   "SMB_GROUP_FS_QUOTA_TYPE (gid[%u])\n",
-				   path, bdev, (unsigned)getgid()));
+				   path, bdev, (unsigned)getegid()));
 
 			if ((ret = quotactl(QCMD(Q_GETQUOTA, GRPQUOTA), bdev,
-					    getgid(), (caddr_t)&D)) == 0) {
+					    getegid(), (caddr_t)&D)) == 0) {
 				qflags |= QUOTAS_DENY_DISK;
 			}
 
@@ -189,10 +189,10 @@ int sys_set_vfs_quota(const char *path, const char *bdev,
 		case SMB_GROUP_FS_QUOTA_TYPE:
 			DEBUG(10, ("sys_set_vfs_quota: path[%s] bdev[%s] "
 				   "SMB_GROUP_FS_QUOTA_TYPE (gid[%u])\n",
-				   path, bdev, (unsigned)getgid()));
+				   path, bdev, (unsigned)getegid()));
 
 			ret = quotactl(QCMD(Q_GETQUOTA, GRPQUOTA), bdev,
-				       getgid(), (caddr_t)&D);
+				       getegid(), (caddr_t)&D);
 			cur_enf = (ret == 0);
 			new_enf = ((dp->qflags & QUOTAS_DENY_DISK) != 0);
 			/* We're not changing quota enforcement, so return
